package org.technbolts.protobuf;

option java_package = "org.technbolts.protobuf";
option java_outer_classname = "RequestPBModel";

option optimize_for = SPEED;

import "common.proto";

// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
//   request
// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
message Request {
    // system
    optional uint64 id = 1;
    optional uint32 system_state = 2;
    optional uint32 request_state = 3;

    optional int64  creation_date = 4;
    optional int64  last_update_date = 5;
    optional int64  close_date = 6;
    optional uint32 distribution_mode = 7;

    //
    optional Ref    responsible = 8;

    // details
    optional RequestDetails details = 10;
}

message RequestDetails {
    optional string locale = 1;
    optional Ref    created_by = 2;
    optional Ref    originator = 3;
    optional Ref    last_updated_by = 4;
    optional Ref    closed_by = 5;
    repeated RequestEvent event = 6;

    optional Entity entity = 7;
}

message RequestEvent {
    optional uint64 id = 1;
    optional uint32 type = 2;
    optional int64  date = 3;
    optional Ref originated_by = 4;
    optional Ref destination = 5;
    optional string comment = 6;
    optional Entity entity = 7;
}

message RequestList {
    repeated uint32 request_id = 1;
    repeated Request request = 2;
}
